--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css" />
+<title>Image Slider</title>
 
 <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
   <img
